update: buttload of changes, implement recompute, update returns
